# t3kroots.com

./: .buildpacks  .gitignore  CNAME  app.py  index.html  index.js  package-lock.json  package.json  pyproject.toml  requirements.txt  style.1741c57e.css  t3kroots.06da0494.js  t3kroots.06da0494.js.map  t3kroots.794993c7.js.map  t3kroots.com.06da0494.js  t3kroots.com.06da0494.js.map
.github/workflows/: blank.yml
src/: Main.elm
static/: elm.json  package-lock.json  package.json
static/assets/: style.scss
static/assets/lessons/: lesson1.md  lesson2.md
static/src/: Main.elm
