[tool.poetry]
name = "t3kroots"
version = "0.1.0"
description = ""
authors = ["Christopher Miller <miller1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
whitenoise = "^5.2.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
